# LearnAI

./: .gitignore  LICENSE  LICENSE.md  README.md  ai_alchemy.md  ai_books.md  ai_engineer.md  ai_faq.md  ai_hype.md  ai_intro.md  faq.md  index.md  main.py  pyproject.toml
Level-0/basics/: ai_essentials.md  ai_reading_list.md
Level-0/cv/: cv.md
Level-0/dl/: cnn.md  dl.md  optimizers.md
Level-0/ml/: audio.md  bias_variance.md  data_prep.md  eda.md  feature_engineering.md  performance_metrics.md  regression.md
Level-0/nlp/: nlp.md
Level-0/process/: imbalanced_class.md
Level-0/swe/: peopleware.md  sql.md
Level-1/basics/: ai_essentials.md  ieee_ethics.md  pandas.md  pandas_basics.md  (+3 more)
Level-3/: factor_analysis.md
articles/: why_math.md
cheatsheets/: cheatsheets.md  ml_cheatsheet.md  time_series_analysis_cheatsheet.md  time_series_forecast_cheatsheet.md
checklist/: ai_checklist.md  ai_project_planning.md  applied_ml_checklist.md  ml_project_checklist.md
code/: cv_img_aug.py  decorator.md  pandas_big_data.md  pandas_code.md  pandas_file_formats.md  pandas_snippets.md  pandas_tips.md  performance_metrics.md  python_code.md  python_cv.md  python_cv_snippets.md  python_decorator.md  python_decorator_code.md  python_snippets.md  python_tips.md  pytorch_loader.md  timer.md
css/: style.css
process/: applied_ml.md  imbalanced_class_framework.md
python/: concat_files.py  eda.py  keras_pollution.py  keras_transformer.py  keras_tune_shampoo.py  keras_weather.py  merge_files.py  mindmap.py  time_series_analysis.py  time_series_decompose.py  timer_wrapper.py
(+165 files in other folders)
